<resources>
    <string name="app_name">BookStore</string>
    <string name="book_city">书城</string>
    <string name="book_self">书架</string>
    <string name="book_idea">想法</string>
    <string name="book_my">我的</string>
    <string name="login_name">登录</string>
    <string name="register_name">注册</string>
    <string name="shopping_cart">卓购物</string>
    <string name="member">卓会员</string>
    <string name="waller">卓钱包</string>
    <string name="my_planning">我的订单</string>
    <string name="name_not_exist">用户不存在</string>
</resources>
