<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <FrameLayout
        android:id="@+id/main_content"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"></FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:background="#f4f4f4"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/llCity"
            style="@style/BaseLinearLayoutStyle">

            <ImageView
                android:id="@+id/ivCity"
                style="@style/BaseImageViewStyle"
                android:src="@drawable/tab_menu_bookcity" />

            <TextView
                android:id="@+id/tvCity"
                style="@style/BaseTextViewStyle"
                android:text="@string/book_city" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/llSelf"
            style="@style/BaseLinearLayoutStyle">

            <ImageView
                android:id="@+id/ivSelf"
                style="@style/BaseImageViewStyle"
                android:src="@drawable/tab_menu_bookself" />

            <TextView
                android:id="@+id/tvSelf"
                style="@style/BaseTextViewStyle"
                android:text="@string/book_self" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/llIdea"
            style="@style/BaseLinearLayoutStyle">

            <ImageView
                android:id="@+id/ivIdea"
                style="@style/BaseImageViewStyle"
                android:src="@drawable/tab_menu_idea" />

            <TextView
                android:id="@+id/tvIdea"
                style="@style/BaseTextViewStyle"
                android:text="@string/book_idea" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/llSettings"
            style="@style/BaseLinearLayoutStyle">

            <ImageView
                android:id="@+id/ivSettings"
                style="@style/BaseImageViewStyle"
                android:src="@drawable/tab_menu_my" />

            <TextView
                android:id="@+id/tvSettings"
                style="@style/BaseTextViewStyle"
                android:text="@string/book_my" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>